# photoneutron-dosimetry-geant4

./: .gitignore  CITATION.cff  LICENSE  README.md
analysis/: README.md  parte1.m  parte2.m  parte3.m  parte4.m  parte5.m
docs/: KNOWN_ISSUES.md  PIPELINE.md
docs/report/: README.md  references.bib  report_en.tex  report_es.tex
docs/report/figures/: README.md
simulation/: CMakeLists.txt  README.md
simulation/include/: DetectorConstruction.hh  MyActionInitialization.hh  MyDoseDeposit.hh  MyRun.hh  MyRunAction.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  SteppingAction.hh  physics.hh
simulation/macros/: init_vis.mac  photon_10MeV.mac  photon_12MeV.mac  photon_15MeV.mac  photon_18MeV.mac  photon_6MeV.mac
simulation/scripts/: master.sh  run_photon.sh
simulation/src/: DetectorConstruction.cc  MyActionInitialization.cc  MyDoseDeposit.cc  MyRun.cc  MyRunAction.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  SteppingAction.cc  physics.cc  sim.cc
